--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
         reservations:
           devices:
             - driver: nvidia
+              # Fix for docker-ce 27.3.x bugs.
+              # refs:
+              #   https://x.com/yanorei32/status/1840455188928405554
+              #   https://github.com/moby/moby/pull/48483
+              #   https://docs.docker.com/compose/how-tos/gpu-support/
+              count: all
               capabilities: [gpu]
 
   cloudflared:
